# MTG-Commander-Recommender

./: .gitignore  README.md  SPEC.xlsx  mtg_recommender.db
backend/: pyproject.toml
backend/app/: main.py
backend/app/data_pipeline/: basic_land_catalog.py  card_resolver.py  collection_normalizer.py  csv_importer.py  scryfall_ingest.py  scryfall_tagger.py
backend/app/db/: database.py
backend/app/models/: card.py  collection.py  deck.py  saved_deck.py  score_log.py
backend/app/recommendation/: card_explainer.py  card_quality_scorer.py  colorless_rules.py  commander_pool.py  commander_profiles.py  commander_recommender.py  commander_scorer.py  deck_candidate_pool.py  deck_exporter.py  deck_generator.py  legality_validator.py  mana_base_rules.py  manual_tag_overrides.py  package_density.py  package_detector.py  package_labeler.py  quality_overrides.py  quota_config.py  role_assignment.py  role_credit.py  role_tagger.py  role_taxonomy.py  strategic_coherence.py  synergy_graph.py  upgrade_suggester.py
backend/app/repositories/: card_repo.py  collection_repo.py  saved_deck_repo.py
backend/app/schemas/: collection_schema.py  deck_schema.py  recommendation_schema.py
backend/app/services/: collection_service.py  deck_generation_service.py  recommendation_service.py  saved_deck_service.py
backend/mtg_commander_recommender.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: fetch_scryfall_tags.py
backend/tests/: conftest.py
backend/tests/fixtures/: manual_tag_overrides.json  sample_commanders.json  sample_csv_collections.py  (+2 more)
docs/: SPEC.md
(+62 files in other folders)
